--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "constantinople": "^3.1.1",
+    "clean-css": "^4.1.11"
   }
 }
