--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "classnames": "^2.2.6",
-    "framer-motion": "^1.11.0",
+    "framer-motion": "^1.5.0",
     "howler": "2.1.3",
     "lodash": "^4.17.15",
     "pluralize": "^8.0.0",
@@ -22,11 +22,14 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-splitter-layout": "latest",
+    "react-spring": "^8.0.27",
+    "react-three-fiber": "^4.2.8",
     "redux": "latest",
     "redux-thunk": "latest",
     "rxjs": "^6.5.5",
     "socket.io": "^2.0.4",
-    "styled-components": "^3.1.6"
+    "styled-components": "^3.1.6",
+    "three": "^0.117.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -34,13 +37,14 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.5",
+    "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "path": "^0.12.7",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "mini-css-extract-plugin": "^0.4.5",
-    "optimize-css-assets-webpack-plugin": "^5.0.3"
+    "webpack-dev-server": "^3.2.1"
   },
   "scripts": {
     "test": "./node_modules/react-scripts/bin/react-scripts.js test",
