--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon ./bin/dev_www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
