--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "framer-motion": "^1.5.0",
     "howler": "2.1.3",
     "lodash": "^4.17.15",
@@ -50,7 +51,7 @@
   "scripts": {
     "test": "./node_modules/react-scripts/bin/react-scripts.js test",
     "dev": "webpack-dev-server --mode development --config webpack.dev.config.js --port 3000 --env.NODE_ENV=devLocal",
-    "prod": "webpack-dev-server --mode development --config webpack.prod.config.js --port 3000 --env.NODE_ENV=prodLocal",
+    "prod": "webpack-dev-server --mode development --config webpack.dev.config.js --port 3000 --env.NODE_ENV=prodLocal",
     "start": "webpack-dev-server --mode development --config webpack.prod.config.js --port 3000 --env.NODE_ENV=prodLocal",
     "build": "rm -rf build && node ./node_modules/webpack/bin/webpack.js --mode production --config ./webpack.prod.config.js --env.NODE_ENV=prodLocal"
   },
