--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "classname": "0.0.0",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "framer-motion": "^1.5.0",
     "howler": "2.1.3",
     "lodash": "^4.17.15",
+    "lodash.debounce": "^4.0.8",
     "pluralize": "^8.0.0",
     "prop-types": "latest",
     "react": "^16.13.1",
@@ -30,7 +32,14 @@
     "rxjs": "^6.5.5",
     "socket.io": "^2.0.4",
     "styled-components": "^3.1.6",
-    "three": "^0.117.1"
+    "three": "^0.117.1",
+    "array-move": "^2.2.2",
+    "awesome-debounce-promise": "^2.1.0",
+    "laravel-mix": "^5.0.4",
+    "node-sass": "^4.14.1",
+    "react-async-hook": "^3.6.1",
+    "react-resize-detector": "^5.0.6",
+    "use-constant": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -43,6 +52,8 @@
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "path": "^0.12.7",
+    "sass": "^1.26.9",
+    "sass-loader": "^8.0.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
