--- a/client/package.json
+++ b/client/package.json
@@ -15,21 +15,22 @@
     "dotenv": "^8.2.0",
     "framer-motion": "^1.5.0",
     "howler": "2.1.3",
-    "laravel-mix": "^5.0.4",
-    "lodash": "^4.17.15",
+    "laravel-mix": "^5.0.5",
+    "lodash": "^4.17.20",
     "lodash.debounce": "^4.0.8",
     "node-sass": "^4.14.1",
     "pluralize": "^8.0.0",
     "prop-types": "latest",
     "react": "^16.13.1",
     "react-async-hook": "^3.6.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dnd": "^10.0.0",
     "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.13.1",
     "react-redux": "latest",
     "react-resize-detector": "^5.0.6",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-scroll-wheel-handler": "^1.1.5",
     "react-splitter-layout": "latest",
     "react-spring": "^8.0.27",
