--- a/client/package.json
+++ b/client/package.json
@@ -41,7 +41,8 @@
     "socket.io": "^2.0.4",
     "styled-components": "^3.1.6",
     "three": "^0.117.1",
-    "use-constant": "^1.0.0"
+    "use-constant": "^1.0.0",
+    "use-debounce": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
