--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@geckos.io/typed-array-buffer-schema": "^1.0.2",
     "@material-ui/core": "latest",
     "@material-ui/icons": "latest",
     "@testing-library/jest-dom": "^4.2.4",
