--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./index.js"
   },
   "dependencies": {
+    "@geckos.io/typed-array-buffer-schema": "^1.0.2",
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
