--- a/shared/package.json
+++ b/shared/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@geckos.io/typed-array-buffer-schema": "^1.0.2"
+    "@geckos.io/typed-array-buffer-schema": "^1.0.2",
+    "pluralize": "^8.0.0"
   }
 }
