--- a/client/package.json
+++ b/client/package.json
@@ -5,68 +5,68 @@
   "dependencies": {
     "@material-ui/core": "latest",
     "@material-ui/icons": "latest",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "array-move": "^2.2.2",
-    "awesome-debounce-promise": "^2.1.0",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.5.0",
+    "@testing-library/user-event": "7.2.1",
+    "array-move": "2.2.2",
+    "awesome-debounce-promise": "2.1.0",
     "classname": "0.0.0",
-    "classnames": "^2.2.6",
-    "dotenv": "^8.2.0",
-    "framer-motion": "^1.5.0",
+    "classnames": "2.2.6",
+    "dotenv": "8.2.0",
+    "framer-motion": "1.5.0",
     "howler": "2.1.3",
-    "laravel-mix": "^5.0.5",
-    "lodash": "^4.17.20",
-    "lodash.debounce": "^4.0.8",
-    "node-sass": "^4.14.1",
-    "pluralize": "^8.0.0",
+    "laravel-mix": "5.0.5",
+    "lodash": "4.17.20",
+    "lodash.debounce": "4.0.8",
+    "node-sass": "4.14.1",
+    "pluralize": "8.0.0",
     "prop-types": "latest",
-    "react": "^16.13.1",
-    "react-async-hook": "^3.6.1",
-    "react-beautiful-dnd": "^13.0.0",
-    "react-dnd": "^10.0.0",
-    "react-dnd-html5-backend": "^10.0.2",
-    "react-dom": "^16.13.1",
+    "react": "16.13.1",
+    "react-async-hook": "3.6.1",
+    "react-beautiful-dnd": "13.0.0",
+    "react-dnd": "10.0.0",
+    "react-dnd-html5-backend": "10.0.2",
+    "react-dom": "16.13.1",
     "react-redux": "latest",
-    "react-resize-detector": "^5.0.6",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3",
-    "react-scroll-wheel-handler": "^1.1.5",
+    "react-resize-detector": "5.0.6",
+    "react-router-dom": "5.1.2",
+    "react-scripts": "3.4.3",
+    "react-scroll-wheel-handler": "1.1.5",
     "react-splitter-layout": "latest",
-    "react-spring": "^8.0.27",
-    "react-three-fiber": "^4.2.8",
+    "react-spring": "8.0.27",
+    "react-three-fiber": "4.2.8",
     "redux": "latest",
     "redux-thunk": "latest",
-    "rxjs": "^6.5.5",
-    "socket.io": "^2.0.4",
-    "styled-components": "^3.1.6",
-    "three": "^0.117.1",
-    "use-constant": "^1.0.0",
-    "use-debounce": "^5.0.1"
+    "rxjs": "6.5.5",
+    "socket.io": "2.0.4",
+    "styled-components": "3.1.6",
+    "three": "0.117.1",
+    "use-constant": "1.0.0",
+    "use-debounce": "5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.5",
-    "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "path": "^0.12.7",
-    "sass": "^1.26.9",
-    "sass-loader": "^8.0.2",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "@babel/core": "7.4.3",
+    "@babel/preset-env": "7.4.3",
+    "@babel/preset-react": "7.0.0",
+    "babel-loader": "8.0.5",
+    "file-loader": "6.0.0",
+    "html-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "0.4.5",
+    "node-sass": "4.14.1",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "path": "0.12.7",
+    "sass": "1.26.9",
+    "sass-loader": "8.0.2",
+    "uglifyjs-webpack-plugin": "1.3.0",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.3.0",
+    "webpack-dev-server": "3.2.1"
   },
   "scripts": {
     "test": "./node_modules/react-scripts/bin/react-scripts.js test",
-    "dev": "webpack-dev-server --mode development --config webpack.dev.config.js --port 3000 --env.NODE_ENV=devLocal",
-    "prod": "webpack-dev-server --mode development --config webpack.dev.config.js --port 3000 --env.NODE_ENV=prodLocal",
-    "start": "webpack-dev-server --mode development --config webpack.prod.config.js --port 3000 --env.NODE_ENV=prodLocal",
+    "dev": "./node_modules/.bin/webpack-dev-server --mode development --config webpack.dev.config.js --port 3000 --env.NODE_ENV=devLocal",
+    "prod": "./node_modules/.bin/webpack-dev-server --mode development --config webpack.dev.config.js --port 3000 --env.NODE_ENV=prodLocal",
+    "start": "./node_modules/.bin/webpack-dev-server --mode development --config webpack.prod.config.js --port 3000 --env.NODE_ENV=prodLocal",
     "build": "rm -rf build && node ./node_modules/webpack/bin/webpack.js --mode production --config ./webpack.prod.config.js --env.NODE_ENV=prodLocal"
   },
   "eslintConfig": {
