--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "latest",
-    "@material-ui/icons": "latest",
+    "@material-ui/core": "4.12.4",
+    "@material-ui/icons": "4.9.1",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
+    "acorn": "^6.4.2",
     "array-move": "2.2.2",
     "awesome-debounce-promise": "2.1.0",
     "classname": "0.0.0",
@@ -20,23 +21,23 @@
     "lodash.debounce": "4.0.8",
     "node-sass": "4.14.1",
     "pluralize": "8.0.0",
-    "prop-types": "latest",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-async-hook": "3.6.1",
     "react-beautiful-dnd": "13.0.0",
     "react-dnd": "10.0.0",
     "react-dnd-html5-backend": "10.0.2",
     "react-dom": "16.13.1",
-    "react-redux": "latest",
+    "react-redux": "7.2.0",
     "react-resize-detector": "5.0.6",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.3",
     "react-scroll-wheel-handler": "1.1.5",
-    "react-splitter-layout": "latest",
+    "react-splitter-layout": "4.0.0",
     "react-spring": "8.0.27",
     "react-three-fiber": "4.2.8",
-    "redux": "latest",
-    "redux-thunk": "latest",
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0",
     "rxjs": "6.5.5",
     "socket.io": "2.0.4",
     "styled-components": "3.1.6",
@@ -58,7 +59,7 @@
     "sass": "1.26.9",
     "sass-loader": "8.0.2",
     "uglifyjs-webpack-plugin": "1.3.0",
-    "webpack": "4.29.6",
+    "webpack": "^4.46.0",
     "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.2.1"
   },
