--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
-    "acorn": "^6.4.2",
+    "acorn": "6.4.2",
     "array-move": "2.2.2",
     "awesome-debounce-promise": "2.1.0",
     "classname": "0.0.0",
@@ -19,9 +19,8 @@
     "laravel-mix": "5.0.5",
     "lodash": "4.17.20",
     "lodash.debounce": "4.0.8",
-    "node-sass": "4.14.1",
     "pluralize": "8.0.0",
-    "prop-types": "^15.7.2",
+    "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-async-hook": "3.6.1",
     "react-beautiful-dnd": "13.0.0",
@@ -53,21 +52,21 @@
     "file-loader": "6.0.0",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.4.5",
-    "node-sass": "4.14.1",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "path": "0.12.7",
     "sass": "1.26.9",
     "sass-loader": "8.0.2",
     "uglifyjs-webpack-plugin": "1.3.0",
-    "webpack": "^4.46.0",
+    "webpack": "4.46.0",
     "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.2.1"
   },
   "scripts": {
-    "test": "./node_modules/react-scripts/bin/react-scripts.js test",
-    "dev": "./node_modules/.bin/webpack-dev-server --mode development --config webpack.dev.config.js --port 3000 --env.NODE_ENV=devLocal",
-    "prod": "./node_modules/.bin/webpack-dev-server --mode development --config webpack.dev.config.js --port 3000 --env.NODE_ENV=prodLocal",
-    "start": "./node_modules/.bin/webpack-dev-server --mode development --config webpack.prod.config.js --port 3000 --env.NODE_ENV=prodLocal",
+    "test": "bash ./node_modules/react-scripts/bin/react-scripts.js test",
+    "dev": "bash ./node_modules/.bin/webpack-dev-server --mode development --config webpack.dev.config.js --port 3000 --env.NODE_ENV=devLocal",
+    "prod": "bash ./node_modules/.bin/webpack-dev-server --mode development --config webpack.dev.config.js --port 3000 --env.NODE_ENV=prodLocal",
+    "start": "bash ./node_modules/.bin/webpack-dev-server --mode development --config webpack.prod.config.js --port 3000 --env.NODE_ENV=prodLocal",
     "build": "rm -rf build && node ./node_modules/webpack/bin/webpack.js --mode production --config ./webpack.prod.config.js --env.NODE_ENV=prodLocal"
   },
   "eslintConfig": {
